chore: Update image click behavior and fix overlapping issue

--- a/frontend/my-react-app/src/assets/styles/Info.css
+++ b/frontend/my-react-app/src/assets/styles/Info.css
@@ -22,6 +22,7 @@
   margin: 3vh 0;
   border-radius: 8px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .info p {
